--- a/docs/posts/03wk-1.out.ipynb
+++ b/docs/posts/03wk-1.out.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "907fd0c2-a028-446e-a22e-54c690274a93"
+      "id": "108e0909-9484-47d7-a8e3-ff0002ec254d"
     },
     {
       "cell_type": "code",
@@ -33,7 +33,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "5de9535f-57a7-44d4-9e98-2c10e3a2d18f"
+      "id": "5b667d43-3bbb-48b9-9e88-b62f80aaf184"
     },
     {
       "cell_type": "code",
@@ -181,7 +181,7 @@
         "\n",
         "`-` $X$를 가지고 $y$를 맞추는 아래와 같은 문제"
       ],
-      "id": "ad2b2d69-688d-47ee-bc00-2977191007e8"
+      "id": "b588c581-c067-4cff-a744-13404195b651"
     },
     {
       "cell_type": "code",
@@ -215,7 +215,7 @@
         "\n",
         "`-` 아래와 같이 모형화 하면?"
       ],
-      "id": "a8e0bedf-a587-4967-839a-e463d77e5df4"
+      "id": "485f56e4-2891-4af0-9add-875e42e164d2"
     },
     {
       "cell_type": "code",
@@ -254,7 +254,7 @@
         "\\<— 외우세요!!!\n",
         "\n",
         "-   $y_i \\sim {\\cal B}(\\pi_i),\\quad$ where\n",
-        "    $\\pi_i = \\frac{\\exp(w_0+w_1x_i)}{1+\\exp(w_0+w_1x_i)}$\n",
+        "    $\\pi_i = \\frac{\\exp(w_0+w_1x_i)}{1+\\exp(w_0+w_1x_i)} = \\frac{1}{1+\\exp(-w_0-w_1x_i)}$\n",
         "\n",
         "-   $\\hat{y}_i= \\frac{\\exp(\\hat{w}_0+\\hat{w}_1x_i)}{1+\\exp(\\hat{w}_0+\\hat{w}_1x_i)}=\\frac{1}{1+\\exp(-\\hat{w}_0-\\hat{w}_1x_i)}$\n",
         "\n",
@@ -282,7 +282,7 @@
         "[1] 원래는 이렇게 썼었지..\n",
         "$y_i = w_0 + w_1x_i + \\epsilon_i \\quad \\epsilon_i \\sim {\\cal N}(0,\\sigma^2)$"
       ],
-      "id": "d4ad2df3-1902-4eab-9cb6-4594cd4c614d"
+      "id": "4c0e43d4-5bab-4eab-bd4e-be723f502a76"
     },
     {
       "cell_type": "code",
@@ -336,7 +336,7 @@
         "`-` 최초의 곡선을 그려보자. ($net: x \\to yhat$ 을 수행하는 네트워크를\n",
         "설계해보자는 의미)"
       ],
-      "id": "9e05a674-469d-4bf8-9163-0dede0614b11"
+      "id": "c763b0b6-1036-4aea-8461-7df860d6407a"
     },
     {
       "cell_type": "code",
@@ -394,7 +394,7 @@
       "source": [
         "`-` `w0hat + w1hat*x` 이 부분을 `torch.nn.Linear(bias = False)`로 구현"
       ],
-      "id": "2727391a-dceb-42f1-a12b-9fb390d5af38"
+      "id": "16a860c2-3ed3-477f-a7e2-d9aac8089db8"
     },
     {
       "cell_type": "code",
@@ -440,7 +440,7 @@
       "source": [
         "`-` `w0hat + w1hat*x` 이 부분을 `torch.nn.Linear(bias = True)`로 구현"
       ],
-      "id": "a4638d51-7bfb-4ea7-b981-8f306c62424b"
+      "id": "b69d1e4e-1131-4ba6-9e7f-c70ac5de9dad"
     },
     {
       "cell_type": "code",
@@ -487,7 +487,7 @@
       "source": [
         "`-` 내가만든 sigmoid 대신에 토치에서 제공하는 sigmoid 사용"
       ],
-      "id": "c3328480-c5c9-4a54-984e-bab473086b9b"
+      "id": "fe4a3b5f-1cee-4698-b282-6b9e655cc7c8"
     },
     {
       "cell_type": "code",
@@ -519,7 +519,7 @@
       "source": [
         "`-` 지금까지의 구현 확인"
       ],
-      "id": "a6afff87-9f8a-4cc9-bb03-d11ed940476e"
+      "id": "7753aa62-bd36-420c-acd0-6fe5746d3023"
     },
     {
       "cell_type": "code",
@@ -560,7 +560,7 @@
         "\n",
         "이러한 기능을 하는 하나의 함수 $net$을 만들 수 없을까?"
       ],
-      "id": "b90f981a-9ce1-4439-b197-6e8096ed8284"
+      "id": "91abffd4-7a41-467b-81d5-764d81e97899"
     },
     {
       "cell_type": "code",
@@ -593,7 +593,7 @@
         "`-` net 살펴보기: 초보버전 – “파이토치 30일만에 완성하기” 이런책에 보면\n",
         "내용이 나올지도?"
       ],
-      "id": "0ad34db9-23d5-41d0-b902-c3019beb8fbd"
+      "id": "ee776d04-a7f1-47a7-a15c-17d22ade5d54"
     },
     {
       "cell_type": "code",
@@ -615,7 +615,7 @@
         "\n",
         "`-` net 살펴보기: 고수버전 – 책 안보고 코딩배우기"
       ],
-      "id": "2daed4ef-f7a4-450e-a452-778027a68f3c"
+      "id": "97612920-de6f-4697-a386-47fac444b681"
     },
     {
       "cell_type": "code",
@@ -636,7 +636,7 @@
         "-   좋은거 가지고 있네 ㅎㅎ\n",
         "-   callable 이면서 subscriptable 오브젝트.."
       ],
-      "id": "c7ab3d02-6cb5-4386-bfe6-3e031320e3ae"
+      "id": "c6a76f49-d0d0-4280-98ed-6ea060ac7021"
     },
     {
       "cell_type": "code",
@@ -741,7 +741,7 @@
       "source": [
         "## D. Step 1~4"
       ],
-      "id": "1995dbbe-6080-4d45-ba0a-a0f249ddb710"
+      "id": "97d30759-6db7-4d2a-996b-d446aa9be554"
     },
     {
       "cell_type": "code",
@@ -851,7 +851,7 @@
         "\n",
         "## A. 좋은 초기값"
       ],
-      "id": "db64f4c1-c375-4fd9-98b8-8611e1849cf4"
+      "id": "b79c25e3-912f-4883-a683-13568b0d6cc1"
     },
     {
       "cell_type": "code",
@@ -880,7 +880,7 @@
       "source": [
         "## B. 가능성 있는 초기값"
       ],
-      "id": "77bf5c59-d28b-40a2-97bd-9437f7be680f"
+      "id": "24c0ca4b-17e8-4090-b6a2-6d223a64ea56"
     },
     {
       "cell_type": "code",
@@ -909,7 +909,7 @@
       "source": [
         "## C. 최악의 초기값"
       ],
-      "id": "4da8c51b-a534-47a8-8613-efff798de182"
+      "id": "49e158df-7485-4b45-8851-83dca74332ec"
     },
     {
       "cell_type": "code",
@@ -950,7 +950,7 @@
         "\n",
         "-   <https://en.wikipedia.org/wiki/Cross-entropy>"
       ],
-      "id": "b0cb2d33-5213-41c1-9936-aeb6104f3be1"
+      "id": "f0a75bc3-1180-470f-9698-d6035c6dcc56"
     },
     {
       "cell_type": "code",
@@ -1014,7 +1014,7 @@
         "\n",
         "`-` loss수식을 못외우겠다면?"
       ],
-      "id": "ad0d94aa-a0b4-47c7-98f9-002fa3e2d3d8"
+      "id": "bfedd836-1cc5-4e9c-8387-19dba2792351"
     },
     {
       "cell_type": "code",
@@ -1076,7 +1076,7 @@
       "source": [
         "## B. Loss Function 시각화"
       ],
-      "id": "ffbb5c87-21dd-4c70-89ec-d05ebccd20af"
+      "id": "29f1633f-b90b-4ade-914c-de600550e1a6"
     },
     {
       "cell_type": "code",
@@ -1124,7 +1124,7 @@
       "source": [
         "`-` 비교해보자."
       ],
-      "id": "79fb40af-dc2e-44fe-88e5-1b88990d4cdf"
+      "id": "8649777d-3c93-4490-8113-fa2436ce8126"
     },
     {
       "cell_type": "code",
@@ -1158,7 +1158,7 @@
         "\n",
         "`-` MSELoss"
       ],
-      "id": "73130936-773c-4a27-a8e6-378113532686"
+      "id": "2f7a1fb2-6094-4c7f-9b10-69e3ca1e6f55"
     },
     {
       "cell_type": "code",
@@ -1187,7 +1187,7 @@
       "source": [
         "`-` BCELoss"
       ],
-      "id": "da75babc-2795-4bea-810b-8b5341f52144"
+      "id": "03cee557-0365-454f-9ee2-6e9adfc69486"
     },
     {
       "cell_type": "code",
@@ -1218,7 +1218,7 @@
         "\n",
         "`-` MSELoss"
       ],
-      "id": "f771b189-f706-4e0e-81e2-4648bcc782a8"
+      "id": "7869b920-88f4-4860-8888-ed8a883d3753"
     },
     {
       "cell_type": "code",
@@ -1247,7 +1247,7 @@
       "source": [
         "`-` BCELoss"
       ],
-      "id": "9f0273e5-7dde-4fc7-8b16-ffd182cba6d8"
+      "id": "bdcf28bb-ccd9-46b3-ba55-d9081dd63509"
     },
     {
       "cell_type": "code",
@@ -1278,7 +1278,7 @@
         "\n",
         "`-` MSELoss"
       ],
-      "id": "7485b6c0-4caa-49d9-856f-f1d1574418b8"
+      "id": "811ec5d8-5dc7-49f8-879e-becc08f6bb65"
     },
     {
       "cell_type": "code",
@@ -1307,7 +1307,7 @@
       "source": [
         "`-` BCELoss"
       ],
-      "id": "09a7bbd6-2469-4f06-8467-f5cd1ba164f4"
+      "id": "5e4aa17d-1f2d-4108-b404-7a10fe93388c"
     },
     {
       "cell_type": "code",
@@ -1340,7 +1340,7 @@
         "\n",
         "`-` MSELoss + SGD"
       ],
-      "id": "cb836629-9adc-416c-9403-ae57784bd535"
+      "id": "2d5dfa95-e8ce-4f98-bcf9-fa8d0d666509"
     },
     {
       "cell_type": "code",
@@ -1369,7 +1369,7 @@
       "source": [
         "`-` MSELoss + Adam"
       ],
-      "id": "436f24aa-6b5e-4194-b74c-91b86c8ca736"
+      "id": "80af2f8f-f820-46fd-a588-0e5b9f22c6aa"
     },
     {
       "cell_type": "code",
@@ -1400,7 +1400,7 @@
         "\n",
         "`-` MSELoss + SGD"
       ],
-      "id": "4f0aff60-57a9-4afa-86d8-6530ccfcc7c8"
+      "id": "7342494c-b74b-4308-b270-3a2816fe65c5"
     },
     {
       "cell_type": "code",
@@ -1429,7 +1429,7 @@
       "source": [
         "`-` MSELoss + Adam"
       ],
-      "id": "dc501fa6-6e34-4f2a-b002-ab381f6cf4b8"
+      "id": "bcb198ff-b02b-47bf-a314-22f90bd1c336"
     },
     {
       "cell_type": "code",
@@ -1460,7 +1460,7 @@
         "\n",
         "`-` MSELoss + SGD"
       ],
-      "id": "1e984332-a796-4ac2-b6cb-b29513880344"
+      "id": "dc374e35-e433-421c-975b-95f0893075cb"
     },
     {
       "cell_type": "code",
@@ -1489,7 +1489,7 @@
       "source": [
         "`-` MSELoss + Adam"
       ],
-      "id": "d96ce535-083f-489f-a95f-c5b011dbe506"
+      "id": "225c62f5-0afe-4294-915d-f2f2152d41c8"
     },
     {
       "cell_type": "code",
@@ -1537,7 +1537,7 @@
         "\n",
         "## B. 가짜데이터"
       ],
-      "id": "918bfd72-3436-40ac-a6e8-e4d661c63ee0"
+      "id": "e8f66f7f-847c-4e67-82ef-9d18f1edf2ce"
     },
     {
       "cell_type": "code",
@@ -1595,7 +1595,7 @@
       "source": [
         "## C. 로지스틱으로 적합"
       ],
-      "id": "5298e55e-276d-4172-aac0-37fa10d8e970"
+      "id": "3f001046-4244-4cd2-80b6-b729f96a8fe6"
     },
     {
       "cell_type": "code",
@@ -1663,7 +1663,7 @@
         "\n",
         "`-` sigmoid를 넣기 전의 상태가 직선이 아니라 꺽이는 직선이야 한다."
       ],
-      "id": "e67778ce-f24c-4c7d-9e4f-1363dc606b39"
+      "id": "4c04b567-e303-4eb3-9c5b-7a7936244125"
     },
     {
       "cell_type": "code",
@@ -1726,7 +1726,7 @@
         "강의노트의 로직스틱 예제 `ToyData2` 에서 다양한 초기값에서 BCE loss 와\n",
         "Adma을 이용하여 학습해보고 시각화해보라."
       ],
-      "id": "f3f65207-e608-4f62-a710-c98432a66756"
+      "id": "c7acdc5a-72ef-4d74-82cc-5106be8c33af"
     }
   ],
   "nbformat": 4,
