--- a/docs/posts/03wk-1.out.ipynb
+++ b/docs/posts/03wk-1.out.ipynb
@@ -4,16 +4,16 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 03wk-1: 로지스틱 – 로지스틱, BCELoss, Adam, 로지스틱의 한계\n",
+        "# 03wk-1: 로지스틱 – 로지스틱 소개, BCELoss, Adam, 로지스틱의 한계\n",
         "\n",
         "최규빈  \n",
         "2024-03-18\n",
         "\n",
-        "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/02wk-2.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>\n",
+        "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/03wk-1.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>\n",
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "37ce5061-c8c8-413d-8a74-dcde0516aca0"
+      "id": "94f94007-8d79-4d1c-ac99-e6e970a321e2"
     },
     {
       "cell_type": "code",
@@ -33,7 +33,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "ce9e2802-23c7-4fc0-ba0d-7c8613ae0331"
+      "id": "7edf9617-7c5a-4c12-a305-bf0f6a23d040"
     },
     {
       "cell_type": "code",
@@ -181,7 +181,7 @@
         "\n",
         "`-` $X$를 가지고 $y$를 맞추는 아래와 같은 문제"
       ],
-      "id": "d7dad62d-ffe3-48a6-95ca-412601a1ed77"
+      "id": "cd3633da-a3fd-46e0-9023-a706afb5916a"
     },
     {
       "cell_type": "code",
@@ -215,7 +215,7 @@
         "\n",
         "`-` 아래와 같이 모형화 하면?"
       ],
-      "id": "a64dabda-9a96-4629-ab07-dd68c2460ac8"
+      "id": "296d6e4b-b651-4c24-a762-83d062a4e7d6"
     },
     {
       "cell_type": "code",
@@ -282,7 +282,7 @@
         "[1] 원래는 이렇게 썼었지..\n",
         "$y_i = w_0 + w_1x_i + \\epsilon_i \\quad \\epsilon_i \\sim {\\cal N}(0,\\sigma^2)$"
       ],
-      "id": "882c1577-a70d-42f4-9f0c-462ebc546d36"
+      "id": "0fe301c0-042b-4961-abf7-ea3f8cd2e99b"
     },
     {
       "cell_type": "code",
@@ -336,7 +336,7 @@
         "`-` 최초의 곡선을 그려보자. ($net: x \\to yhat$ 을 수행하는 네트워크를\n",
         "설계해보자는 의미)"
       ],
-      "id": "40108bc2-3cdc-43d5-b54b-9c29577f6d6d"
+      "id": "3e947946-a6fc-4058-b402-4030b8277df3"
     },
     {
       "cell_type": "code",
@@ -394,7 +394,7 @@
       "source": [
         "`-` `w0hat + w1hat*x` 이 부분을 `torch.nn.Linear(bias = False)`로 구현"
       ],
-      "id": "f7bb880b-2d07-47ae-b075-80a80baef060"
+      "id": "d06fa5da-8bc7-46fe-93d1-5ff7ad436659"
     },
     {
       "cell_type": "code",
@@ -440,7 +440,7 @@
       "source": [
         "`-` `w0hat + w1hat*x` 이 부분을 `torch.nn.Linear(bias = True)`로 구현"
       ],
-      "id": "3ec0509d-5f5c-467e-958d-573225f919ba"
+      "id": "a3a127de-5c45-4355-ae79-0e360b19bb3a"
     },
     {
       "cell_type": "code",
@@ -487,7 +487,7 @@
       "source": [
         "`-` 내가만든 sigmoid 대신에 토치에서 제공하는 sigmoid 사용"
       ],
-      "id": "a2019145-d77b-4781-9eee-058c61c7a599"
+      "id": "b2d18f00-1212-45d2-9d79-141f039d299b"
     },
     {
       "cell_type": "code",
@@ -519,7 +519,7 @@
       "source": [
         "`-` 지금까지의 구현 확인"
       ],
-      "id": "d5ffd09d-12e6-4632-a3be-12b726f63ddd"
+      "id": "f60c0ae8-9cf8-4fd1-84c0-39d2412cbdc0"
     },
     {
       "cell_type": "code",
@@ -560,7 +560,7 @@
         "\n",
         "이러한 기능을 하는 하나의 함수 $net$을 만들 수 없을까?"
       ],
-      "id": "0d021252-55a9-4242-95d8-5e8ff08da53f"
+      "id": "228845cf-484e-4ebf-a843-87e7a6f9317b"
     },
     {
       "cell_type": "code",
@@ -593,7 +593,7 @@
         "`-` net 살펴보기: 초보버전 – “파이토치 30일만에 완성하기” 이런책에 보면\n",
         "내용이 나올지도?"
       ],
-      "id": "7ddac6a2-1188-400a-a3a3-b01680ece9ea"
+      "id": "9d2c9b37-f077-4876-818a-a275372f1025"
     },
     {
       "cell_type": "code",
@@ -615,7 +615,7 @@
         "\n",
         "`-` net 살펴보기: 고수버전 – 책 안보고 코딩배우기"
       ],
-      "id": "df228849-dba1-450e-ab27-7f35493db3c6"
+      "id": "17aa03e1-8b99-4d58-a583-33249ef59af5"
     },
     {
       "cell_type": "code",
@@ -636,7 +636,7 @@
         "-   좋은거 가지고 있네 ㅎㅎ\n",
         "-   callable 이면서 subscriptable 오브젝트.."
       ],
-      "id": "3eca7a3d-ba45-4f7f-94b4-d55ac9218e4c"
+      "id": "f57680bd-f677-40dc-86c9-dd3d934f118b"
     },
     {
       "cell_type": "code",
@@ -741,7 +741,7 @@
       "source": [
         "## D. Step 1~4"
       ],
-      "id": "111acfd3-9575-49f5-a5fb-705cb9793a53"
+      "id": "0a4ca792-dfa9-4f1d-b5c3-634017638562"
     },
     {
       "cell_type": "code",
@@ -851,7 +851,7 @@
         "\n",
         "## A. 좋은 초기값"
       ],
-      "id": "443209ae-9b27-4cc7-a5dd-099c8a45ee96"
+      "id": "7d962fea-0b2b-4b7c-b2ce-fdca49755fef"
     },
     {
       "cell_type": "code",
@@ -880,7 +880,7 @@
       "source": [
         "## B. 가능성 있는 초기값"
       ],
-      "id": "ad62c2aa-670c-4a41-849c-b4ca735197cf"
+      "id": "37759f33-af52-4186-ac42-73b70de78de3"
     },
     {
       "cell_type": "code",
@@ -909,7 +909,7 @@
       "source": [
         "## C. 최악의 초기값"
       ],
-      "id": "3292c69f-47e4-4dad-9212-1d39da17b00f"
+      "id": "ec4a2270-e76a-4c03-be0a-437dca1e4d16"
     },
     {
       "cell_type": "code",
@@ -950,7 +950,7 @@
         "\n",
         "-   <https://en.wikipedia.org/wiki/Cross-entropy>"
       ],
-      "id": "d32db79b-4a4a-4323-acba-c38628395b32"
+      "id": "6209a663-1855-434d-8dbd-826805aecd6c"
     },
     {
       "cell_type": "code",
@@ -1014,7 +1014,7 @@
         "\n",
         "`-` loss수식을 못외우겠다면?"
       ],
-      "id": "626f0ac1-3fcd-4cef-a429-1e11a017fce4"
+      "id": "d9c2ee82-098a-4e18-8127-1da522463397"
     },
     {
       "cell_type": "code",
@@ -1076,7 +1076,7 @@
       "source": [
         "## B. Loss Function 시각화"
       ],
-      "id": "d6227b2a-7c37-41a1-aae9-9bd5873649a1"
+      "id": "3ba3460a-df11-4117-9897-d42f401a9770"
     },
     {
       "cell_type": "code",
@@ -1124,7 +1124,7 @@
       "source": [
         "`-` 비교해보자."
       ],
-      "id": "853dddda-cc68-4e7b-91f4-a6d8262d688c"
+      "id": "e3968134-d369-4052-a6c3-d93cba40221c"
     },
     {
       "cell_type": "code",
@@ -1158,7 +1158,7 @@
         "\n",
         "`-` MSELoss"
       ],
-      "id": "07dc425a-d649-49e9-a5ea-d8a6da8a1c00"
+      "id": "32f3752a-4e15-4d93-97a0-b577ec482ac5"
     },
     {
       "cell_type": "code",
@@ -1187,7 +1187,7 @@
       "source": [
         "`-` BCELoss"
       ],
-      "id": "69483ecb-90a5-4cf5-aca5-b645799b4488"
+      "id": "6689ebd7-fb42-45c2-9cba-39b4eac69464"
     },
     {
       "cell_type": "code",
@@ -1218,7 +1218,7 @@
         "\n",
         "`-` MSELoss"
       ],
-      "id": "f3a17c53-3cff-4309-ad5f-8aa0e1fb3bf3"
+      "id": "b01dea0b-9e77-4d01-aa3c-addd58a4a615"
     },
     {
       "cell_type": "code",
@@ -1247,7 +1247,7 @@
       "source": [
         "`-` BCELoss"
       ],
-      "id": "6986194c-400a-4e8a-82f0-686347b10b6e"
+      "id": "b52a3470-a347-4136-b4a1-747a3c663afc"
     },
     {
       "cell_type": "code",
@@ -1278,7 +1278,7 @@
         "\n",
         "`-` MSELoss"
       ],
-      "id": "89e4bb57-13c0-4a31-8756-bde1d14f33c6"
+      "id": "67243de3-dc66-4d98-91ad-03348d0f57ad"
     },
     {
       "cell_type": "code",
@@ -1307,7 +1307,7 @@
       "source": [
         "`-` BCELoss"
       ],
-      "id": "01b3071a-85d8-438c-b833-46367804b645"
+      "id": "fb4a1b31-edc9-4c08-b02a-926d52c22cdb"
     },
     {
       "cell_type": "code",
@@ -1340,7 +1340,7 @@
         "\n",
         "`-` MSELoss + SGD"
       ],
-      "id": "a996d297-cdcb-4ca3-a9c4-cb588b624b52"
+      "id": "55c64825-ffee-41e6-9d30-e600803f57c4"
     },
     {
       "cell_type": "code",
@@ -1369,7 +1369,7 @@
       "source": [
         "`-` MSELoss + Adam"
       ],
-      "id": "9cd080fc-aa66-4ed2-84d2-3d0f3b15f329"
+      "id": "70b2fa36-f407-4370-9b4d-fc3c194f9b82"
     },
     {
       "cell_type": "code",
@@ -1383,8 +1383,8 @@
         "    torch.nn.Linear(1,1),\n",
         "    torch.nn.Sigmoid()\n",
         ") \n",
-        "net[0].bias.data = torch.tensor([-0.8470])\n",
-        "net[0].weight.data = torch.tensor([[-0.3467]])\n",
+        "net[0].bias.data = torch.tensor([-0.8])\n",
+        "net[0].weight.data = torch.tensor([[-0.3]])\n",
         "loss_fn = torch.nn.MSELoss()\n",
         "optimizr = torch.optim.Adam(net.parameters(),lr=0.25) \n",
         "#---#\n",
@@ -1400,7 +1400,7 @@
         "\n",
         "`-` MSELoss + SGD"
       ],
-      "id": "51e39aeb-e9c1-44a6-8f35-b61f20784ee5"
+      "id": "1c893194-55a3-4705-a074-689fc2859267"
     },
     {
       "cell_type": "code",
@@ -1429,7 +1429,7 @@
       "source": [
         "`-` MSELoss + Adam"
       ],
-      "id": "2761fc2f-d735-4d9c-90cb-631b951c6a86"
+      "id": "0a1f3301-a74b-4374-9357-08150ae39112"
     },
     {
       "cell_type": "code",
@@ -1460,7 +1460,7 @@
         "\n",
         "`-` MSELoss + SGD"
       ],
-      "id": "469cdf6e-970b-4698-8c1a-43d4d8eaea78"
+      "id": "42e05945-19f9-47c0-b343-c3f2be6ac549"
     },
     {
       "cell_type": "code",
@@ -1489,7 +1489,7 @@
       "source": [
         "`-` MSELoss + Adam"
       ],
-      "id": "d96789bc-55fa-4c54-bd13-ec1a0e1c6a36"
+      "id": "655c57c8-8d91-4674-aa06-13c6aa168929"
     },
     {
       "cell_type": "code",
@@ -1537,7 +1537,7 @@
         "\n",
         "## B. 가짜데이터"
       ],
-      "id": "30479664-eaae-4110-9c15-c9201f13c08f"
+      "id": "66ffe2c4-8447-4b2c-be1f-f766717eb0c2"
     },
     {
       "cell_type": "code",
@@ -1595,7 +1595,7 @@
       "source": [
         "## C. 로지스틱으로 적합"
       ],
-      "id": "c02fd78f-81db-40e4-a698-64ad50e14089"
+      "id": "b43b730e-dcaf-4dc8-82ec-33d7ed3c9b48"
     },
     {
       "cell_type": "code",
@@ -1663,7 +1663,7 @@
         "\n",
         "`-` sigmoid를 넣기 전의 상태가 직선이 아니라 꺽이는 직선이야 한다."
       ],
-      "id": "c649f3f7-badf-4b00-a778-67d22019ccc7"
+      "id": "ff6be550-be38-432b-893c-dca6f4f1e01f"
     },
     {
       "cell_type": "code",
@@ -1726,7 +1726,7 @@
         "강의노트의 로직스틱 예제 `ToyData2` 에 소개된 데이터를 불러오고, 다양한\n",
         "초기값에서 BCE loss 와 Adma을 이용하여 학습한뒤 시각화하라."
       ],
-      "id": "d71096a2-180c-4fe9-ae83-e27fcb185912"
+      "id": "a532c2ed-f048-4b51-8db9-84b84ce54e54"
     }
   ],
   "nbformat": 4,
