--- a/docs/posts/03wk-1.out.ipynb
+++ b/docs/posts/03wk-1.out.ipynb
@@ -11,29 +11,13 @@
         "\n",
         "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/03wk-1.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>\n",
         "\n",
-        "# 1. 강의영상"
-      ],
-      "id": "94f94007-8d79-4d1c-ac99-e6e970a321e2"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "#{{<video https://youtu.be/playlist?list=PLQqh36zP38-xrw8e2pQ1KqKFb-i3lVtsI&si=dDAjAteouM7Y30HU >}}"
-      ],
-      "id": "d6d3ce79-56ff-45c7-b213-d12fe9bcf65c"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "# 1. 강의영상\n",
+        "\n",
+        "<https://youtu.be/playlist?list=PLQqh36zP38-wO_Mc_74QoweAxCWw5A86_&si=iWAgttM-CIgsi1x3>\n",
+        "\n",
         "# 2. Imports"
       ],
-      "id": "7edf9617-7c5a-4c12-a305-bf0f6a23d040"
+      "id": "ca2af987-7957-48c4-8256-5e88fb4de360"
     },
     {
       "cell_type": "code",
@@ -181,7 +165,7 @@
         "\n",
         "`-` $X$를 가지고 $y$를 맞추는 아래와 같은 문제"
       ],
-      "id": "cd3633da-a3fd-46e0-9023-a706afb5916a"
+      "id": "94cd89fe-db82-45c2-9938-ef7114491284"
     },
     {
       "cell_type": "code",
@@ -215,7 +199,7 @@
         "\n",
         "`-` 아래와 같이 모형화 하면?"
       ],
-      "id": "296d6e4b-b651-4c24-a762-83d062a4e7d6"
+      "id": "9371390f-0380-430b-87ed-e803f3509aaf"
     },
     {
       "cell_type": "code",
@@ -282,7 +266,7 @@
         "[1] 원래는 이렇게 썼었지..\n",
         "$y_i = w_0 + w_1x_i + \\epsilon_i \\quad \\epsilon_i \\sim {\\cal N}(0,\\sigma^2)$"
       ],
-      "id": "0fe301c0-042b-4961-abf7-ea3f8cd2e99b"
+      "id": "670e9324-2950-491b-b895-bf04e73d0125"
     },
     {
       "cell_type": "code",
@@ -336,7 +320,7 @@
         "`-` 최초의 곡선을 그려보자. ($net: x \\to yhat$ 을 수행하는 네트워크를\n",
         "설계해보자는 의미)"
       ],
-      "id": "3e947946-a6fc-4058-b402-4030b8277df3"
+      "id": "3ebb86d8-fc4a-4a91-9de7-d764b8a118f5"
     },
     {
       "cell_type": "code",
@@ -394,7 +378,7 @@
       "source": [
         "`-` `w0hat + w1hat*x` 이 부분을 `torch.nn.Linear(bias = False)`로 구현"
       ],
-      "id": "d06fa5da-8bc7-46fe-93d1-5ff7ad436659"
+      "id": "80a59586-d08e-4f54-a991-167cd4d5a0f7"
     },
     {
       "cell_type": "code",
@@ -440,7 +424,7 @@
       "source": [
         "`-` `w0hat + w1hat*x` 이 부분을 `torch.nn.Linear(bias = True)`로 구현"
       ],
-      "id": "a3a127de-5c45-4355-ae79-0e360b19bb3a"
+      "id": "07a61255-f95b-48e1-a9fe-fd9dbdd7bdde"
     },
     {
       "cell_type": "code",
@@ -487,7 +471,7 @@
       "source": [
         "`-` 내가만든 sigmoid 대신에 토치에서 제공하는 sigmoid 사용"
       ],
-      "id": "b2d18f00-1212-45d2-9d79-141f039d299b"
+      "id": "7f23ab27-b917-40ae-9bcf-951b3b18a4a2"
     },
     {
       "cell_type": "code",
@@ -519,7 +503,7 @@
       "source": [
         "`-` 지금까지의 구현 확인"
       ],
-      "id": "f60c0ae8-9cf8-4fd1-84c0-39d2412cbdc0"
+      "id": "c1fa4977-d4bc-434c-b92c-cc5ec8345f51"
     },
     {
       "cell_type": "code",
@@ -560,7 +544,7 @@
         "\n",
         "이러한 기능을 하는 하나의 함수 $net$을 만들 수 없을까?"
       ],
-      "id": "228845cf-484e-4ebf-a843-87e7a6f9317b"
+      "id": "92164f6f-5aa2-488f-b47d-f96569b08f69"
     },
     {
       "cell_type": "code",
@@ -593,7 +577,7 @@
         "`-` net 살펴보기: 초보버전 – “파이토치 30일만에 완성하기” 이런책에 보면\n",
         "내용이 나올지도?"
       ],
-      "id": "9d2c9b37-f077-4876-818a-a275372f1025"
+      "id": "092b38ba-6477-4686-a832-48a0e239cf8c"
     },
     {
       "cell_type": "code",
@@ -615,7 +599,7 @@
         "\n",
         "`-` net 살펴보기: 고수버전 – 책 안보고 코딩배우기"
       ],
-      "id": "17aa03e1-8b99-4d58-a583-33249ef59af5"
+      "id": "6b37f2ea-a7e5-434b-8bf3-96964fea6bdc"
     },
     {
       "cell_type": "code",
@@ -636,7 +620,7 @@
         "-   좋은거 가지고 있네 ㅎㅎ\n",
         "-   callable 이면서 subscriptable 오브젝트.."
       ],
-      "id": "f57680bd-f677-40dc-86c9-dd3d934f118b"
+      "id": "97380368-3652-47f5-8157-c6a461e19fc8"
     },
     {
       "cell_type": "code",
@@ -741,7 +725,7 @@
       "source": [
         "## D. Step 1~4"
       ],
-      "id": "0a4ca792-dfa9-4f1d-b5c3-634017638562"
+      "id": "29267572-5c2b-4ad1-a591-bee830c223c6"
     },
     {
       "cell_type": "code",
@@ -851,7 +835,7 @@
         "\n",
         "## A. 좋은 초기값"
       ],
-      "id": "7d962fea-0b2b-4b7c-b2ce-fdca49755fef"
+      "id": "3903105f-8319-4ca0-97ad-c6c82688cead"
     },
     {
       "cell_type": "code",
@@ -880,7 +864,7 @@
       "source": [
         "## B. 가능성 있는 초기값"
       ],
-      "id": "37759f33-af52-4186-ac42-73b70de78de3"
+      "id": "9a023a4c-4fea-4c7c-99f0-d0849e924efd"
     },
     {
       "cell_type": "code",
@@ -909,7 +893,7 @@
       "source": [
         "## C. 최악의 초기값"
       ],
-      "id": "ec4a2270-e76a-4c03-be0a-437dca1e4d16"
+      "id": "01f1bf1e-65b4-4c94-90ce-ca02a39e5fc7"
     },
     {
       "cell_type": "code",
@@ -950,7 +934,7 @@
         "\n",
         "-   <https://en.wikipedia.org/wiki/Cross-entropy>"
       ],
-      "id": "6209a663-1855-434d-8dbd-826805aecd6c"
+      "id": "cc1730e6-94da-4652-9952-225a12f62ca5"
     },
     {
       "cell_type": "code",
@@ -1014,7 +998,7 @@
         "\n",
         "`-` loss수식을 못외우겠다면?"
       ],
-      "id": "d9c2ee82-098a-4e18-8127-1da522463397"
+      "id": "7d069d37-84b7-4eef-9728-2e806cf9f1a3"
     },
     {
       "cell_type": "code",
@@ -1076,7 +1060,7 @@
       "source": [
         "## B. Loss Function 시각화"
       ],
-      "id": "3ba3460a-df11-4117-9897-d42f401a9770"
+      "id": "9dff454e-9ee6-4fae-adda-4d766195fe07"
     },
     {
       "cell_type": "code",
@@ -1124,7 +1108,7 @@
       "source": [
         "`-` 비교해보자."
       ],
-      "id": "e3968134-d369-4052-a6c3-d93cba40221c"
+      "id": "11d971d4-f338-4cfe-8336-cc2345411dd4"
     },
     {
       "cell_type": "code",
@@ -1158,7 +1142,7 @@
         "\n",
         "`-` MSELoss"
       ],
-      "id": "32f3752a-4e15-4d93-97a0-b577ec482ac5"
+      "id": "b6590d6c-af4d-4d1f-89ae-969feac388e7"
     },
     {
       "cell_type": "code",
@@ -1187,7 +1171,7 @@
       "source": [
         "`-` BCELoss"
       ],
-      "id": "6689ebd7-fb42-45c2-9cba-39b4eac69464"
+      "id": "d024e8bd-04fd-4b83-80c3-26748abc54ef"
     },
     {
       "cell_type": "code",
@@ -1218,7 +1202,7 @@
         "\n",
         "`-` MSELoss"
       ],
-      "id": "b01dea0b-9e77-4d01-aa3c-addd58a4a615"
+      "id": "6e702eb4-e821-4eba-8776-c6c7003fca41"
     },
     {
       "cell_type": "code",
@@ -1247,7 +1231,7 @@
       "source": [
         "`-` BCELoss"
       ],
-      "id": "b52a3470-a347-4136-b4a1-747a3c663afc"
+      "id": "036e490e-232d-4344-b166-7925d9058451"
     },
     {
       "cell_type": "code",
@@ -1278,7 +1262,7 @@
         "\n",
         "`-` MSELoss"
       ],
-      "id": "67243de3-dc66-4d98-91ad-03348d0f57ad"
+      "id": "113eb898-27f0-4c4b-9991-fa0d34eced84"
     },
     {
       "cell_type": "code",
@@ -1307,7 +1291,7 @@
       "source": [
         "`-` BCELoss"
       ],
-      "id": "fb4a1b31-edc9-4c08-b02a-926d52c22cdb"
+      "id": "2554f490-55ca-4cd3-aec2-0321e2c486e7"
     },
     {
       "cell_type": "code",
@@ -1340,7 +1324,7 @@
         "\n",
         "`-` MSELoss + SGD"
       ],
-      "id": "55c64825-ffee-41e6-9d30-e600803f57c4"
+      "id": "a85a2d7b-d927-4e29-b2cc-87db0d20ae26"
     },
     {
       "cell_type": "code",
@@ -1369,7 +1353,7 @@
       "source": [
         "`-` MSELoss + Adam"
       ],
-      "id": "70b2fa36-f407-4370-9b4d-fc3c194f9b82"
+      "id": "850ca974-4470-4c3a-a9af-8162aeb7aeb0"
     },
     {
       "cell_type": "code",
@@ -1400,7 +1384,7 @@
         "\n",
         "`-` MSELoss + SGD"
       ],
-      "id": "1c893194-55a3-4705-a074-689fc2859267"
+      "id": "5be96d6d-4fb5-4c07-84c1-cda67342ebbb"
     },
     {
       "cell_type": "code",
@@ -1429,7 +1413,7 @@
       "source": [
         "`-` MSELoss + Adam"
       ],
-      "id": "0a1f3301-a74b-4374-9357-08150ae39112"
+      "id": "594192f2-d2ed-4641-87e6-d9f0bb8e8f03"
     },
     {
       "cell_type": "code",
@@ -1460,7 +1444,7 @@
         "\n",
         "`-` MSELoss + SGD"
       ],
-      "id": "42e05945-19f9-47c0-b343-c3f2be6ac549"
+      "id": "909b9baa-1586-447d-8757-2bbb402ab901"
     },
     {
       "cell_type": "code",
@@ -1489,7 +1473,7 @@
       "source": [
         "`-` MSELoss + Adam"
       ],
-      "id": "655c57c8-8d91-4674-aa06-13c6aa168929"
+      "id": "61e44c09-4bfe-4929-b1c9-033cbe150cea"
     },
     {
       "cell_type": "code",
@@ -1537,7 +1521,7 @@
         "\n",
         "## B. 가짜데이터"
       ],
-      "id": "66ffe2c4-8447-4b2c-be1f-f766717eb0c2"
+      "id": "9c4f5c7a-0bfb-467b-b897-438678a9af9e"
     },
     {
       "cell_type": "code",
@@ -1595,7 +1579,7 @@
       "source": [
         "## C. 로지스틱으로 적합"
       ],
-      "id": "b43b730e-dcaf-4dc8-82ec-33d7ed3c9b48"
+      "id": "443011d8-29c9-473e-8356-9fcd2c5c8273"
     },
     {
       "cell_type": "code",
@@ -1663,7 +1647,7 @@
         "\n",
         "`-` sigmoid를 넣기 전의 상태가 직선이 아니라 꺽이는 직선이야 한다."
       ],
-      "id": "ff6be550-be38-432b-893c-dca6f4f1e01f"
+      "id": "1e3da491-00ad-4962-ab69-ce502e32289c"
     },
     {
       "cell_type": "code",
@@ -1726,7 +1710,7 @@
         "강의노트의 로직스틱 예제 `ToyData2` 에 소개된 데이터를 불러오고, 다양한\n",
         "초기값에서 BCE loss 와 Adma을 이용하여 학습한뒤 시각화하라."
       ],
-      "id": "a532c2ed-f048-4b51-8db9-84b84ce54e54"
+      "id": "7012f7a1-5de8-42a9-abfc-1ed53e887b46"
     }
   ],
   "nbformat": 4,
