--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "525d0cc4-fd38-47b1-8837-d795c9c1b6ff"
+      "id": "bd33638f-6cf6-43ca-b91b-921adaddd436"
     },
     {
       "cell_type": "code",
@@ -33,7 +33,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "c88fd8db-e46b-4a84-a05b-6e9cc16991eb"
+      "id": "7bf84f9a-a952-4a22-a75b-e632c9eec634"
     },
     {
       "cell_type": "code",
@@ -60,7 +60,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "61ebc131-0b00-4f2f-9cac-c5d448f8d6ae"
+      "id": "c1cb772a-0bae-42f6-9e4d-4aafd9d1e0da"
     },
     {
       "cell_type": "code",
@@ -85,7 +85,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "f42746da-8970-439f-b6de-4fd871bdb23a"
+      "id": "0aebd5a3-b851-45d7-a00b-68b522bb2778"
     },
     {
       "cell_type": "code",
@@ -127,7 +127,7 @@
       "source": [
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "8380d306-1754-402c-a260-5f27a7de4dab"
+      "id": "1ca276af-7c3d-4df1-a455-7fea39f46b1c"
     },
     {
       "cell_type": "code",
@@ -214,7 +214,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "4cbcdc35-b591-493d-93f8-2ff6e1973765"
+      "id": "ae052cf6-f367-43c1-98d9-69eb7c804b94"
     },
     {
       "cell_type": "code",
@@ -278,7 +278,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "65d0c6a6-960c-4e33-9b70-b736ae046471"
+      "id": "f9752c77-9063-4186-aa41-5763035e0fed"
     },
     {
       "cell_type": "code",
@@ -298,7 +298,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "444eacfe-c3a7-4c8c-9166-c1e5d48ea7f5"
+      "id": "3f0da6bf-2fa5-478d-b5bd-8479d2368930"
     },
     {
       "cell_type": "code",
@@ -319,7 +319,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "bd98810b-0f46-4484-b2e7-5795d8c64d8b"
+      "id": "48fbd9fd-93e1-44c1-ab2e-b13ff05a51b9"
     },
     {
       "cell_type": "code",
@@ -340,7 +340,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "7540bdb5-56e8-4e69-ad3f-c06b46a5dc9d"
+      "id": "04da8b4f-92e9-4537-a2c4-ed5a9e0033c1"
     },
     {
       "cell_type": "code",
@@ -372,22 +372,11 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
-        "    v_{11} & v_{12}  \\\\\n",
-        "    v_{21} & v_{22}  \\\\\n",
-        "    \\dots & \\dots  \\\\\n",
-        "    v_{n1} & v_{n2}  \\\\\n",
-        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
-        "    \\begin{bmatrix}\n",
-        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
-        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
-        "    \\dots \\\\\n",
-        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
-        "    \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
         "\n",
         "이를 정리하면"
       ],
-      "id": "d14fe574-b8c7-4d60-acf0-4d856a77776e"
+      "id": "11827ebd-f720-4992-84c0-e6457cfca3e0"
     },
     {
       "cell_type": "code",
@@ -409,7 +398,7 @@
       "source": [
         "이것은 다시 아래의 코드와 같다."
       ],
-      "id": "9040d9fa-5996-4e89-a9b3-c9f0327b4261"
+      "id": "c4479f8c-4e9e-47c3-ba2f-aa72eb4e010d"
     },
     {
       "cell_type": "code",
@@ -464,7 +453,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "5c9d3b09-10b2-49b2-aa8d-986f506e4e6a"
+      "id": "aa9ea4d9-e16b-4a02-bb27-a9a6d97fdfbc"
     },
     {
       "cell_type": "code",
@@ -510,7 +499,7 @@
       "source": [
         "`-` 따라서 최종적으로는 아래와 같이 구현할 수 있다."
       ],
-      "id": "ce08dac6-28f6-4139-907f-602c603e94e7"
+      "id": "f5085b7a-c3a8-49d5-ba5a-817ba604b3c7"
     },
     {
       "cell_type": "code",
@@ -548,7 +537,7 @@
       "source": [
         "`-` 이것은 다시 아래와 같이 구현할 수 있다."
       ],
-      "id": "de13537b-e1e5-4248-95f7-075aec404fa2"
+      "id": "b62ae1ac-05d8-4385-b56c-9dc46674ead0"
     },
     {
       "cell_type": "code",
@@ -617,7 +606,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "a0966686-52a7-4cb4-bad0-ae9bddec5ea2"
+      "id": "d5fd870d-e73e-424d-9fcf-08638eb14611"
     },
     {
       "cell_type": "code",
@@ -682,7 +671,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "867296f4-0cc3-4086-b022-022092d2efd9"
+      "id": "53102801-52c0-4a77-88a5-d4b1f9d27467"
     },
     {
       "cell_type": "code",
