--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -13,11 +13,11 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "9249c890-045a-4127-a053-d8ded327c0b0"
+      "id": "f894ddef-76fc-415f-9c3b-6746409b90ae"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "metadata": {
         "tags": []
       },
@@ -33,11 +33,11 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "142c761a-c3b1-4953-b95e-e3e03d92040d"
+      "id": "82034eca-24b5-462e-a46c-b298a4cc71a2"
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 64,
       "metadata": {
         "tags": []
       },
@@ -60,11 +60,11 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "d8011c9b-2975-4725-9907-dd8e220e1b9b"
+      "id": "5c58b23e-bb8a-4e95-b6e8-d80f58bad408"
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 65,
       "metadata": {
         "tags": []
       },
@@ -85,7 +85,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "b51cff8a-8656-438b-8ac8-29ec4ff0bdde"
+      "id": "23c55d95-1224-4e2e-803d-dbe850330c5a"
     },
     {
       "cell_type": "code",
@@ -127,7 +127,7 @@
       "source": [
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "843d4b81-2b64-4012-99ce-6ebce361cf31"
+      "id": "d6bd80ce-2417-4769-8b82-cca586deb1aa"
     },
     {
       "cell_type": "code",
@@ -214,7 +214,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "881d9c9c-7a22-4f1d-bfb1-fb5f615aa1b0"
+      "id": "10f62ea6-7f17-4d3f-9214-43a24f84e3c4"
     },
     {
       "cell_type": "code",
@@ -278,7 +278,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "86a8ff10-d5fd-46c2-a62e-150fc04a7254"
+      "id": "32f08aa7-26b9-4e8b-af77-8df418217450"
     },
     {
       "cell_type": "code",
@@ -298,7 +298,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "0423bdf3-d4be-4eb4-9ec9-e2a07b46e0c8"
+      "id": "66ae6989-711c-424b-8d03-60c8379bbc82"
     },
     {
       "cell_type": "code",
@@ -319,7 +319,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "dff8aaeb-9420-4212-923b-357c477ec9f2"
+      "id": "a4d7a4ca-ff18-4fbc-ad60-6e544ccbcb93"
     },
     {
       "cell_type": "code",
@@ -340,7 +340,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "85775aef-58c8-4558-8403-f4e3fcf746f9"
+      "id": "8399de4b-7f73-490e-8cab-dcec48689c92"
     },
     {
       "cell_type": "code",
@@ -374,9 +374,9 @@
         "\n",
         "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
         "\n",
-        "이를 정리하면"
+        "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "1e58c7c9-3fb0-46d6-94b9-6dac011a8b6d"
+      "id": "2ad7cbc2-e1b4-42e3-b742-f25f1d7c937d"
     },
     {
       "cell_type": "code",
@@ -396,9 +396,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "이것은 다시 아래의 코드와 같다."
+        "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
+        "같아진다."
       ],
-      "id": "c5068af8-8146-4419-b444-b955b1801d5b"
+      "id": "8da91b2f-e8d9-4259-a676-e65036a48155"
     },
     {
       "cell_type": "code",
@@ -453,7 +454,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "706b3741-1a25-4031-98cb-bde1d012494e"
+      "id": "0d03ab06-7237-4536-b22b-0f85d0e2b033"
     },
     {
       "cell_type": "code",
@@ -497,9 +498,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "`-` 따라서 최종적으로는 아래와 같이 구현할 수 있다."
+        "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
+        "수 있다."
       ],
-      "id": "39ce48f1-a9e2-43ee-aefe-136516fc30a4"
+      "id": "83d87a38-7dda-44d5-9042-7ba45a88b388"
     },
     {
       "cell_type": "code",
@@ -535,9 +537,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "`-` 이것은 다시 아래와 같이 구현할 수 있다."
+        "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
+        "수 있다."
       ],
-      "id": "15ef57ad-389b-4183-8386-d238c237fce5"
+      "id": "cad8f6ae-fa29-43a7-aec6-7569e120b995"
     },
     {
       "cell_type": "code",
@@ -598,15 +601,15 @@
         "-   $b^{(2)}=4.5$\n",
         "\n",
         "`(5)`\n",
-        "$net({\\bf X})=(a_2 \\circ l_2 \\circ a_1\\circ l_1)({\\bf X})=\\text{sig}\\Big(\\text{relu}\\big({\\bf X}{\\bf W}^{(1)}\\overset{bc}{+}{\\boldsymbol b}^{(1)}\\big){\\bf W}^{(2)}\\overset{bc}{+}b^{(2)}\\Big)$\n",
+        "$net({\\bf X})=(l_2 \\circ a_1\\circ l_1)({\\bf X})=\\text{relu}\\big({\\bf X}{\\bf W}^{(1)}\\overset{bc}{+}{\\boldsymbol b}^{(1)}\\big){\\bf W}^{(2)}\\overset{bc}{+}b^{(2)}$\n",
         "\n",
-        "$\\quad =\\begin{bmatrix} \\text{sig}\\Big(-4.5\\times\\text{relu}(x_1) -9.0 \\times \\text{relu}(-x_1) +4.5\\Big) \\\\ \\text{sig}\\Big(-4.5\\times\\text{relu}(x_2) -9.0 \\times\\text{relu}(-x_2) + 4.5 \\Big)\\\\ \\dots \\\\ \\text{sig}\\Big(-4.5\\times \\text{relu}(x_n) -9.0 \\times\\text{relu}(-x_n)+4.5 \\Big)\\end{bmatrix}$\n",
+        "$\\quad =\\begin{bmatrix} -4.5\\times\\text{relu}(x_1) -9.0 \\times \\text{relu}(-x_1) +4.5 \\\\ -4.5\\times\\text{relu}(x_2) -9.0 \\times\\text{relu}(-x_2) + 4.5 \\\\ \\dots \\\\ -4.5\\times \\text{relu}(x_n) -9.0 \\times\\text{relu}(-x_n)+4.5 \\end{bmatrix}$\n",
         "\n",
         "# 4. 로지스틱의 한계 극복\n",
         "\n",
         "## A. 데이터"
       ],
-      "id": "43ec7390-06ad-4b77-a620-186bb28f806e"
+      "id": "cee3ebf2-4cc8-43d7-9789-b948951f2af3"
     },
     {
       "cell_type": "code",
@@ -671,7 +674,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "3977957a-5051-498d-bfaa-b5df1a28adb3"
+      "id": "14f54a36-469e-43fa-983c-83bbc42e74bc"
     },
     {
       "cell_type": "code",
@@ -792,7 +795,7 @@
       "mimetype": "text/x-python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.2"
+      "version": "3.11.8"
     }
   }
 }
