--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "9d69086d-c544-4c76-8947-3966a179e62b"
+      "id": "36cec655-ed60-4107-babf-bc4c2c841d01"
     },
     {
       "cell_type": "code",
@@ -33,7 +33,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "6c32ddff-d9f5-449c-a627-4b99a3e8f938"
+      "id": "c2d10754-ead5-491f-a476-32872b543954"
     },
     {
       "cell_type": "code",
@@ -60,7 +60,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "78eea503-8996-458e-bd4a-3d9091fb85e3"
+      "id": "efff568c-06a2-4a5d-bed9-86db9aa0e196"
     },
     {
       "cell_type": "code",
@@ -85,7 +85,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "5fe1ab14-89a1-42f6-baa0-8a3e689ee7ec"
+      "id": "93ab9e46-70aa-4cf9-84af-186b82c9c8b6"
     },
     {
       "cell_type": "code",
@@ -125,28 +125,38 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "아래의 코드실행결과가 다른 이유가 궁금하다면 깊은복사 얕은복사 강의를\n",
-        "참고할 것. (그렇지만 가능하면 궁금해하지 말 것..)\n",
-        "\n",
-        "``` python\n",
-        "x = torch.linspace(-1,1,1001).reshape(-1,1)\n",
-        "y = x*0 + x \n",
-        "y[x<0] = (9*x+4.5)[x<0]\n",
-        "y[x>0] = (-4.5*x+4.5)[x>0]\n",
-        "plt.plot(x,y)\n",
-        "```\n",
-        "\n",
-        "``` python\n",
-        "x = torch.linspace(-1,1,1001).reshape(-1,1)\n",
-        "y = x \n",
-        "y[x<0] = (9*x+4.5)[x<0]\n",
-        "y[x>0] = (-4.5*x+4.5)[x>0]\n",
-        "plt.plot(x,y)\n",
-        "```\n",
+        "> **Note**\n",
+        ">\n",
+        "> 강의영상에 보셨듯이 아래의 코드실행결과는 다르게 나옵니다.\n",
+        ">\n",
+        "> ``` python\n",
+        "> ## 아래를 실행하면 꺽인선이 나오는데용...\n",
+        "> x = torch.linspace(-1,1,1001).reshape(-1,1)\n",
+        "> y = x*0 + x \n",
+        "> y[x<0] = (9*x+4.5)[x<0]\n",
+        "> y[x>0] = (-4.5*x+4.5)[x>0]\n",
+        "> plt.plot(x,y)\n",
+        "> ```\n",
+        ">\n",
+        "> ``` python\n",
+        "> ## 이걸 실행하면 그냥 직선이 나옵니다...\n",
+        "> x = torch.linspace(-1,1,1001).reshape(-1,1)\n",
+        "> y = x \n",
+        "> y[x<0] = (9*x+4.5)[x<0]\n",
+        "> y[x>0] = (-4.5*x+4.5)[x>0]\n",
+        "> plt.plot(x,y)\n",
+        "> ```\n",
+        ">\n",
+        "> 다르게 나오는 이유가 너무 궁금하시다면 아래의 링크로 가셔서\n",
+        "> 깊은복사/얕은복사에 대한 개념을 이해하시면 됩니다. (그렇지만\n",
+        "> 가능하다면 궁금해하지 마세요…..)\n",
+        ">\n",
+        "> -   [깊은복사 얕은복사 강의들으러\n",
+        ">     가기](https://guebin.github.io/PP2023/posts/2023-06-21-13wk-1.html)\n",
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "94a5ba0e-db54-4e02-bd17-152fe1eee29c"
+      "id": "dcd313a1-d809-431c-b914-8f04d3c44a43"
     },
     {
       "cell_type": "code",
@@ -233,7 +243,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "e8e4247d-40b0-4f57-9391-798cdc87f250"
+      "id": "bcb45b63-45b3-4b6d-ba54-85dc116901af"
     },
     {
       "cell_type": "code",
@@ -297,7 +307,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "3e072efd-98bb-4469-8c0f-b4d7693d2984"
+      "id": "450b18da-8820-4b57-ad4e-9d392d11128a"
     },
     {
       "cell_type": "code",
@@ -317,7 +327,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "4cd06a93-59ae-4b55-ba22-cda8e149f252"
+      "id": "38239bf3-0711-4419-9d58-449bd72c9b41"
     },
     {
       "cell_type": "code",
@@ -338,7 +348,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "326b91fb-46f2-4af1-a99f-590cd0e119c3"
+      "id": "fa7dd492-e80c-41b3-90eb-2be883291d99"
     },
     {
       "cell_type": "code",
@@ -359,7 +369,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "5fe7a5ef-3c7e-49ac-851c-c6c50ba2bae8"
+      "id": "e9f812f7-262b-4d40-b418-fe1ed5de29a6"
     },
     {
       "cell_type": "code",
@@ -395,7 +405,7 @@
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "7cd32cf1-e21a-423b-ac49-084f9916eac4"
+      "id": "b49a7295-4a4c-49a9-b8be-7aba79406126"
     },
     {
       "cell_type": "code",
@@ -418,7 +428,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "74f30063-8367-4b01-b124-7173646b7cbd"
+      "id": "87777f1d-608f-470f-9696-17dc78168298"
     },
     {
       "cell_type": "code",
@@ -473,7 +483,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "0a745f98-4605-4030-9b01-598c0da23c16"
+      "id": "32e99eb9-af06-4193-bc0c-013ccec0194c"
     },
     {
       "cell_type": "code",
@@ -520,7 +530,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "9da9af58-ba30-44d6-b74e-8205af476a92"
+      "id": "39f14076-a480-4e9b-999d-5ab9bf3c9382"
     },
     {
       "cell_type": "code",
@@ -559,7 +569,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "566850a7-3b9f-4280-bffd-f63214952df6"
+      "id": "49eafb0a-bf19-44fd-83ca-b77633da6469"
     },
     {
       "cell_type": "code",
@@ -628,7 +638,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "dc623a72-3ade-4472-b0b3-f8dc488d0030"
+      "id": "0822d437-3758-4db8-b2d7-5db3568d6261"
     },
     {
       "cell_type": "code",
@@ -693,7 +703,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "d19acd14-5569-49af-acf5-67b22f161438"
+      "id": "09128989-0563-4c32-b4af-b0fe92348770"
     },
     {
       "cell_type": "code",
