--- a/posts/03wk-2.ipynb
+++ b/posts/03wk-2.ipynb
@@ -8,7 +8,7 @@
    },
    "source": [
     "---\n",
-    "title: \"03wk-2: 깊은신경망 -- 로지스틱의 한계 극복\"\n",
+    "title: \"03wk-2: 깊은신경망 (1) -- 로지스틱의 한계 극복\"\n",
     "author: \"최규빈\"\n",
     "date: \"03/20/2024\"\n",
     "---"
@@ -1368,7 +1368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
