--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "c6466587-eda7-4196-93a6-de826dd8ca47"
+      "id": "5536d871-49ea-4b86-9395-e63ab315dd8a"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "4f46dcaf-d624-44e1-a42c-a775fb871908"
+      "id": "56a672bf-2121-445d-ace9-e140c6721085"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "77c984c3-d847-4825-8b57-1b4dfbcb56a5"
+      "id": "bb09dc18-2654-4f12-a896-b1a5969cd3c0"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "0ba77c2f-55fd-46ae-9afc-f76dc96e8bfd"
+      "id": "4249e924-4e02-4d47-8c91-abea79eeb291"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "d7c98262-be3c-47f4-9cf2-62cb61499523"
+      "id": "19422989-9e3e-45a2-bb5c-4ca46debed78"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "4c78bf20-f592-45a7-a0ab-f91251e48cf0"
+      "id": "dee41ff5-cebb-4272-bbbf-0990fee8b532"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "757165ea-2a13-40de-a117-93b3d915fc2a"
+      "id": "580ccf8d-61ac-4d56-a2b7-fc706b6341b2"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "b30788c3-2031-424f-8b8f-20620baf0f26"
+      "id": "89b3ddad-c426-42f3-8bed-f6a40db0b9bf"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "84e85f97-7bce-401c-9923-b8b79128bc57"
+      "id": "08886d6b-fd25-4635-b2e4-164b594120df"
     },
     {
       "cell_type": "code",
@@ -385,11 +385,22 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
+        "    v_{11} & v_{12}  \\\\\n",
+        "    v_{21} & v_{22}  \\\\\n",
+        "    \\dots & \\dots  \\\\\n",
+        "    v_{n1} & v_{n2}  \\\\\n",
+        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
+        "    \\begin{bmatrix}\n",
+        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
+        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
+        "    \\dots \\\\\n",
+        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
+        "    \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "c8ae44a1-fbb3-4307-bbf4-3a978d0e74eb"
+      "id": "b4f5b823-3ae0-4525-8185-58c986f68f09"
     },
     {
       "cell_type": "code",
@@ -412,7 +423,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "51e63011-c1e3-4297-a8cc-cd9ed155346a"
+      "id": "c418ab00-358b-4076-bcc0-23a89c8ceb40"
     },
     {
       "cell_type": "code",
@@ -467,7 +478,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "0461eb2a-65b4-4d3a-b00c-a92394df7830"
+      "id": "0ae5323a-40ae-4b8f-86c4-0eaf7a36bd77"
     },
     {
       "cell_type": "code",
@@ -514,7 +525,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "ad0f1a23-c1aa-4185-9365-6f1747e6465f"
+      "id": "36e85d97-2037-45f3-a2cc-2e35f54a2eaf"
     },
     {
       "cell_type": "code",
@@ -553,7 +564,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "465e9eda-a93a-4898-a4c8-b4317a37ea24"
+      "id": "dea18d2f-e01d-4e9d-a91b-c69600a75142"
     },
     {
       "cell_type": "code",
@@ -622,7 +633,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "15f091e0-5c49-4c8d-adb1-bc9c2970ca50"
+      "id": "0f0fbcce-b749-464e-bb71-4d6ca94e7634"
     },
     {
       "cell_type": "code",
@@ -687,7 +698,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "02d3e361-fbda-4d40-95c1-a269ab91956a"
+      "id": "ceb8941a-90ac-4c5a-ba30-b9fecf0c9ac6"
     },
     {
       "cell_type": "code",
